--- a/index.html
+++ b/index.html
@@ -1,7 +1,16 @@
--Hello,everyone!
--很高兴能在这里相遇。
--这是我利用GitHub搭建的第一个个人网站，很是简陋，望多多包含。
--我是黄婷婷，学号032002212。
--我喜欢看小说，偶尔追剧追番，不太会玩游戏，偶尔玩玩不用动脑的小游戏，无明显特长，日常笑点低。
--学过了C和C++，数据结构，汇编语言，但都没达到精通的地步。
--接下来主要打算学习Java和Python，学好目前正在学习的学科，同时把之前忘记的重新学习。
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Just-a-mistake</title>
+  </head>
+  <body>
+    <h1>Hello,everyone!</h1>
+    <h2>很高兴能在这里相遇。</h2>
+    <h2>我是黄婷婷，学号032002212。</h2>
+    <h2>这是我利用GitHub搭建的第一个个人网站，很是简陋，望多多包含。</h2>
+    <p>我喜欢看小说，偶尔追剧追番，不太会玩游戏，偶尔玩玩不用动脑的小游戏，无明显特长，日常笑点低。</p>
+    <p>学过了C和C++，数据结构，汇编语言，但都没达到精通的地步。</p>
+    <p>接下来主要打算学习Java和Python，学好目前正在学习的学科，同时把之前忘记的重新学习。</p>
+  </body>
+</html>
