--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <title>Just-a-mistake</title>
   </head>
   <body>
-    <h1>Hello,everyone!</h1>
+    <h1><b>Hello,everyone!</b></h1>
     <h2>很高兴能在这里相遇。</h2>
     <h2>我是黄婷婷，学号032002212。</h2>
     <h2>这是我利用GitHub搭建的第一个个人网站，很是简陋，望多多包含。</h2>
-    <p>我喜欢看小说，偶尔追剧追番，不太会玩游戏，偶尔玩玩不用动脑的小游戏，无明显特长，日常笑点低。</p>
-    <p>学过了C和C++，数据结构，汇编语言，但都没达到精通的地步。</p>
-    <p>接下来主要打算学习Java和Python，学好目前正在学习的学科，同时把之前忘记的重新学习。</p>
+    <h2>我喜欢看小说，偶尔追剧追番，不太会玩游戏，偶尔玩玩不用动脑的小游戏，无明显特长，日常笑点低。</h2>
+    <h2>学过了<b>C和C++，数据结构，汇编语言</b>，但都没达到精通的地步。</h2>
+    <h2>接下来主要打算学习<b>Java</b>和<b>Python</b>，学好目前正在学习的学科，同时把之前忘记的重新学习。</h2>
+    <h2><a href="https://blog.csdn.net/Just_a_mistake?spm=1010.2135.3001.5343">这是我的个人博客</a></h2>
   </body>
 </html>
