--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <h2>学过了<b>C和C++，数据结构，汇编语言</b>，但都没达到精通的地步。</h2>
     <h2>接下来主要打算学习<b>Java</b>和<b>Python</b>，学好目前正在学习的学科，同时把之前忘记的重新学习。</h2>
     <h2><a href="https://blog.csdn.net/Just_a_mistake?spm=1010.2135.3001.5343">这是我的个人博客</a></h2>
+    <img src="3.jpg" width="150" height="150"/>
   </body>
 </html>
