--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Just-a-mistake</title>
     <style>
       body{
-        background-color:blue;
+        background-color:aliceblue;
       }
     </style>
   </head>
