--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>Just-a-mistake</title>
     <style>
       body{
-        background-image:url('images/4.jpg');
+        background-color: rgb(171, 219, 245);
+        text-align: center;
       }
     </style>
   </head>
